# LameMP3ForAndroid

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shoxive/lamemp3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LameSDK.cpp  LameSDK.h  native-lib.cpp
app/src/main/cpp/lameresource/: id3tag.c  vbrquantize.c
app/src/main/java/com/shoxive/lamemp3/: LameSDK.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shoxive/lamemp3/: ExampleUnitTest.java
